<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#222"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="80dp"
        android:layout_marginBottom="100dp"

        >


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFF"
            android:text="My Notes"
            android:textSize="28dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:paddingBottom="20dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:elevation="2dp"
            android:background="@drawable/delete_alert_btn_no"

            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:inputType="textEmailAddress"
                android:layout_margin="10dp"
                android:hint="@string/mailET"
                android:id="@+id/emailET"
        android:backgroundTint="#222"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:inputType="textPassword"
                android:hint="@string/passwordET"
                android:id="@+id/passwordET"
                android:backgroundTint="#222"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="right">

                <Button
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:layout_gravity="right"
                    android:layout_marginRight="20dp"
                    android:text="@string/title_activity_signup"
                    android:id="@+id/registerBtn"
                    android:textColor="#222"
                    android:background="@drawable/delete_alert_btn_no" />

                <Button
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:layout_gravity="right"
                    android:layout_marginRight="20dp"
                    android:text="@string/loginBTN"
                    android:id="@+id/loginBtn"
                    android:textColor="#fff"
                    android:background="@drawable/delete_alert_btn_yes" />
            </LinearLayout>

        </LinearLayout>



    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="#FFF"
        android:elevation="2dp"
        >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="#222222"
    android:elevation="2dp"
    android:layout_marginTop="2dp"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:gravity="center"
        android:textColor="#FFF"
        android:textSize="15dp"
        android:text="Copyright 2018"
        android:layout_marginBottom="10dp"
        />

</LinearLayout>
</LinearLayout>
  <!--  <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />-->
</android.support.design.widget.CoordinatorLayout>